Disable Skrollr on mobile. Padding fix on header for mobile.

--- a/source/css/responsive/_mobile.scss
+++ b/source/css/responsive/_mobile.scss
@@ -327,8 +327,9 @@ nav {
   display: block;
 
   @include media($mobile) {
-    padding: 16px;
+    //padding: 24px;
     text-align: center;
+    height: 800px;
   }
 }
 .message {
@@ -336,8 +337,6 @@ nav {
   //@include shift(3);
 
   //padding: 16px;
-
-  //@include(shift)
   @include span-columns(8);
   @include shift(2);
   position: absolute;
@@ -346,15 +345,17 @@ nav {
   height: 500px;
   line-height: 2em;
   margin-top: -250px;
+  text-align: center;
 
   @include media($mobile) {
       @include span-columns(4);
       @include shift(0);
 
-      top: 40%;
-      height: 300px;
-      margin-top: -150px;
+      top: 50%;
+      height: 600px;
+      margin-top: -300px;
       font-size: 0.8em;
+      display: block;
       text-align: center;
   }
 
@@ -363,13 +364,14 @@ nav {
   margin: 0;
   padding: 0;
   text-align: center;
-  text-align: left;
   font-size: 4em;
   font-family: $eight-bit;
   line-height: 2em;
 
   @include media($mobile) {
     font-size: 1.5em;
+    text-align: center;
+    padding: 8px;
   }
 }
 
@@ -379,8 +381,10 @@ nav {
   text-align: center;
   margin: 0 auto;
   @include media($mobile) {
-    @include span-columns(4);
-    @include shift(0);
+    //@include span-columns(4);
+    text-align: center;
+    margin: 0;
+    //@include shift(0);
 
   }
 }
@@ -427,10 +431,11 @@ span.cursor {
 }
 
 
+
 .intro, .check {
   weight: 500;
   //font-size: 0.9em;
-  text-align: left;
+  text-align: center;
   font-size: 1.2em;
 }
 
@@ -870,7 +875,7 @@ span.cursor {
 /* CONTACT RELATED SECTION */
 
 .contact {
-  height: 600px;
+  height: 650px;
   background-color: #fff;
   //background-image: url('/images/always-grey.png');
   background-size: auto;
